--- a/src/test/resources/html/style.css
+++ b/src/test/resources/html/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +9,7 @@
 }
 
 body {
-  background: #c4c4c4;
+  background: #333;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -20,13 +21,14 @@ body {
           align-items: center;
   height: 100vh;
   margin-bottom: 500px;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
 }
 
 body h2 {
   width: 100%;
   text-align: center;
   padding: 10px;
-  border-bottom: 1px solid #eec2c2;
 }
 
 .container {
@@ -60,6 +62,7 @@ body h2 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  border-radius: 10px;
   height: 100%;
   margin-top: 20px;
   height: 50%;
